src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/B2C_Contact_Integration_History__c.object-meta.xml
<CustomObject>
    <description>... represents the integration history for Account / Contact records integrated with B2C Commerce.</description>
    <label>B2C Contact Integration History</label>
    <nameField>
        <displayFormat>B2C-CP-{0000}</displayFormat>
        <label>Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2C Contact Integration History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>