src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/fields/B2C_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>B2C_AuthToken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>... represents the B2C AuthToken that was used to authorize a given B2C Commerce REST API interaction.</description>
    <inlineHelpText>... represents the B2C AuthToken that was used to authorize a given B2C Commerce REST API interaction.</inlineHelpText>
    <label>B2C AuthToken</label>
    <referenceTo>B2C_AuthToken__c</referenceTo>
    <relationshipLabel>B2C Contact Integration History</relationshipLabel>
    <relationshipName>B2C_Contact_Integration_History</relationshipName>
    <type>Lookup</type>
</CustomField>