src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/fields/B2C_CustomerList__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList__c</fullName>
    <description>... represents the B2C Commerce CustomerList to which the processed Contact is related.</description>
    <inlineHelpText>... represents the B2C Commerce CustomerList to which the processed Contact is related.</inlineHelpText>
    <label>B2C CustomerList</label>
    <referenceTo>B2C_CustomerList__c</referenceTo>
    <relationshipLabel>B2C Contact Integration History</relationshipLabel>
    <relationshipName>B2C_Contact_Integration_History</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>