src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>... represents the Contact record whose B2C Commerce Profile integration is being audited.</description>
    <inlineHelpText>... represents the Contact record whose B2C Commerce Profile integration is being audited.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2C Contact Integration History</relationshipLabel>
    <relationshipName>B2C_Contact_Integration_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>