src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/fields/Integration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Integration_JSON__c</fullName>
    <description>... describes the last OCAPI JSON response used to drive updates to a given B2C Commerce Customer definition.</description>
    <inlineHelpText>... describes the last OCAPI JSON response used to drive updates to a given B2C Commerce Customer definition.</inlineHelpText>
    <label>Integration JSON</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>