src/sfdc/force-app/main/default/objects/B2C_Contact_Integration_History__c/fields/Last_Platform_Event_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Platform_Event_Processed_Date__c</fullName>
    <description>... represents the date that the last B2C Commerce Integration Contact update platform event was processed.</description>
    <inlineHelpText>... represents the date that the last B2C Commerce Integration Contact update platform event was processed.</inlineHelpText>
    <label>Event Processed Date</label>
    <type>DateTime</type>
</CustomField>